# EOSFuzzer

./: README.md
agents/: README.md
agents/atkforg/: atkforg.cpp
dataset/: README.md  fuzz.py  setting.py
dataset/agents/atkforg/: atkforg.abi
dataset/atom/forged/: forged.abi  forged.cpp  forged.wasm  forged.wast
dataset/atom/goodforg/: goodforg.abi  goodforg.cpp  goodforg.wasm  goodforg.wast
dataset/atom/goodnoti/: goodnoti.abi  goodnoti.cpp  goodnoti.wasm  goodnoti.wast
dataset/atom/helloworld/: helloworld.abi  helloworld.cpp  helloworld.wasm  helloworld.wast
dataset/atom/notified/: notified.abi  notified.cpp  notified.wasm  notified.wast
dataset/atom/random/: random.abi  random.cpp  random.wasm  random.wast
dataset/binaryContracts/111asfafaaf2/: 111asfafaaf2.abi
dataset/binaryContracts/11team1dream/: 11team1dream.abi
dataset/binaryContracts/214ogametest/: 214ogametest.wasm
dataset/binaryContracts/3deoslottery/: 3deoslottery.abi  3deoslottery.wasm
dataset/binaryContracts/44gamestoken/: 44gamestoken.abi  44gamestoken.wasm
dataset/binaryContracts/4jscyydlhgij/: 4jscyydlhgij.abi
dataset/binaryContracts/4uck4uck4uck/: 4uck4uck4uck.abi  4uck4uck4uck.wasm
dataset/binaryContracts/51app51app51/: 51app51app51.wasm
dataset/binaryContracts/5211314.bank/: 5211314.bank.wasm
dataset/binaryContracts/a15555353555/: a15555353555.abi
dataset/binaryContracts/a1stadmin111/: a1stadmin111.abi
dataset/binaryContracts/aaaaaabbbbcc/: aaaaaabbbbcc.abi
dataset/binaryContracts/aaaabbbbcccd/: aaaabbbbcccd.abi
dataset/binaryContracts/aaabbbcccppp/: aaabbbcccppp.wasm
dataset/binaryContracts/aaasportsnba/: aaasportsnba.wasm
dataset/binaryContracts/aali5fkop2md/: aali5fkop2md.abi
dataset/binaryContracts/aaronchenhao/: aaronchenhao.wasm
dataset/binaryContracts/abbydicegame/: abbydicegame.wasm
dataset/binaryContracts/abcad1234512/: abcad1234512.wasm
dataset/binaryContracts/abctoken1234/: abctoken1234.abi
dataset/binaryContracts/abshwueifpaj/: abshwueifpaj.wasm
dataset/binaryContracts/acarservice1/: acarservice1.wasm
dataset/binaryContracts/accentertain/: accentertain.abi  accentertain.wasm
dataset/binaryContracts/accmaingate1/: accmaingate1.abi
dataset/binaryContracts/account11111/: account11111.abi  account11111.wasm
dataset/binaryContracts/accountasset/: accountasset.wasm
dataset/binaryContracts/accountbadla/: accountbadla.abi  (+1 more)
dataset/source/fairdicegame/fairdicelogs/: CMakeLists.txt
dataset/source/gravatarcafe/: CMakeLists.txt
dataset/source/signupeoseos/: CMakeLists.txt
eos/: README.md
eos/programs/: CMakeLists.txt
eos/programs/fuzzer/: CMakeLists.txt  base58.hpp  coverage.hpp  data.hpp  logger.hpp  main.cpp  pipe.hpp  result.hpp  setting.hpp  tester.hpp  type.hpp  wastparser.hpp
eosio.cdt/: README.md  eosio.imports.in
(+4791 files in other folders)
